# git-contrib-aggregator

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  schema.json
.github/workflows/: docker.yml  rust.yml
src/: config.rs  data_model.rs  generic.rs  github.rs  gitlab.rs  main.rs  request_handler.rs
